--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <main class="col-12 col-lg-9 d-flex flex-column">
       <div class="m-5 row justify-content-around">
+
         <!--todo start-->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
@@ -41,10 +42,10 @@
           <div class="card">
           <h4 class="card-header bg-dark text-light">In Progress</h4>
           <ul id="list-inProgress" class="list-group list-group-flush">
-            <li class="list-group-item">
+            <!-- <li class="list-group-item">
               <span class="badge badge-primary badge-pill">05/28/2020</span>
               <p class="m-1">Sample Task in Progress</p>
-            </li>
+            </li> -->
           </ul>
           </div>
         </div>
@@ -55,10 +56,10 @@
           <div class="card">
           <h4 class="card-header bg-dark text-light">In review</h4>
           <ul id="list-inReview" class="list-group list-group-flush">
-            <li class="list-group-item">
+            <!-- <li class="list-group-item">
               <span class="badge badge-primary badge-pill">05/28/2020</span>
               <p class="m-1">Sample Task in review</p>
-            </li>
+            </li> -->
           </ul>
           </div>
         </div>
@@ -69,10 +70,10 @@
           <div class="card">
           <h4 class="card-header bg-dark text-light">Done</h4>
           <ul id="list-done" class="list-group list-group-flush">
-            <li class="list-group-item">
+            <!-- <li class="list-group-item">
               <span class="badge badge-primary badge-pill">05/28/2020</span>
               <p class="m-1">Sample task that's done</p>
-            </li>
+            </li> -->
           </ul>
           </div>
         </div>
